nqc/src/snapshots/nqc__error__test__err_span_display.snap
---
source: nqc/src/error.rs
expression: "format!(\"{report:?}\")"
---
  × error
   ╭─[2:9]
 1 │ some text
 2 │ with an error
   ·         ──┬──
   ·           ╰── Syntax error: an error
 3 │ somewhere in it
   ╰────
